crates/test-ui/ui/msg_send_not_allowed_mutable.stderr
error[E0277]: the trait bound `&mut NSObject: MessageReceiver` is not satisfied
 --> ui/msg_send_not_allowed_mutable.rs
  |
  |     let _: () = unsafe { msg_send![&mut *obj, test] };
  |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `&mut NSObject`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&NSObject`, but not for `&mut NSObject`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::RetainSemantics<&mut NSObject, _, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::MsgSend<&mut NSObject, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `&mut NSObject: MessageReceiver` is not satisfied
 --> ui/msg_send_not_allowed_mutable.rs
  |
  |     let _: Retained<NSObject> = unsafe { msg_send![obj, test] };
  |                                          ^^^^^^^^^^^^^^^^^^^^ the trait `MessageReceiver` is not implemented for `&mut NSObject`
  |
  = help: the following other types implement trait `MessageReceiver`:
            &T
            &mut AnyObject
            *const T
            *mut T
            NonNull<T>
  = note: `MessageReceiver` is implemented for `&NSObject`, but not for `&mut NSObject`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::RetainSemantics<&mut NSObject, _, objc2::__macros::KindSendMessage>`
  = note: required for `objc2::__macros::MethodFamily<6>` to implement `objc2::__macros::MsgSend<&mut NSObject, _>`
  = note: this error originates in the macro `$crate::__msg_send_helper` which comes from the expansion of the macro `msg_send` (in Nightly builds, run with -Z macro-backtrace for more info)
